fix overflow

--- a/asset/css/base/reset.css
+++ b/asset/css/base/reset.css
@@ -5,6 +5,10 @@
       padding: 0;
 }
 
+body{
+      overflow: hidden;
+}
+
 a, ul, li, ol{
       text-decoration: none;
       list-style: none;
